cleaned up files
reordered import statements and put todo statements into its own file

--- a/db_ui.ipynb
+++ b/db_ui.ipynb
@@ -12,20 +12,6 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "Todo -\n",
-    "\n",
-    "- try to get csv from go pro file [are those even go pro files?]\n",
-    "- lint/back for enforcing style guide (flint, lake?) (gpt for writing doc string)\n",
-    "- gps data, how many gps points found & words (log whether wav is found or made)\n",
-    "- document backend code\n",
-    "\n",
-    "- clean run so that tables are created if they don't exist\n"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
     "%pip install dash_bootstrap_components\n",
     "%pip install dash_leaflet\n",
     "%pip install geobuff\n",
@@ -70,24 +56,24 @@
     "# from jupyter_dash import JupyterDash\n",
     "import dash\n",
     "import pandas as pd\n",
-    "from dash import Dash, dcc, html, Input, Output, callback, State, no_update, clientside_callback, MATCH, ALL\n",
     "import regex as re\n",
-    "from dash.exceptions import PreventUpdate\n",
-    "from base64 import b64encode\n",
-    "from pprint import pprint\n",
     "import os\n",
     "import numpy as np\n",
     "import cv2\n",
     "import dash_bootstrap_components as dbc\n",
-    "from nist_database import MockDB, MSSQLDatabase\n",
-    "from video_tools import local_file_v\n",
     "import json\n",
     "import random\n",
     "import dash_leaflet as dl\n",
     "import dash_leaflet.express as dlx\n",
+    "from dash import Dash, dcc, html, Input, Output, callback, State, no_update, clientside_callback, MATCH, ALL\n",
     "from dash_extensions.javascript import Namespace\n",
     "from datetime import datetime, timedelta\n",
     "from dash_extensions.javascript import assign\n",
+    "from dash.exceptions import PreventUpdate\n",
+    "from base64 import b64encode\n",
+    "from pprint import pprint\n",
+    "from nist_database import MockDB, MSSQLDatabase\n",
+    "from video_tools import local_file_v\n",
     "\n",
     "with open('./nist-ai.json','r') as f:\n",
     "    AUTH = json.load(f)\n",
@@ -100,78 +86,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>filename</th>\n",
-       "      <th>checksum</th>\n",
-       "      <th>metadata</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>31</td>\n",
-       "      <td>assets/data/TrackAddict/Log-20230626-173441 wa...</td>\n",
-       "      <td>30b55d42d2d5a76d46a4387e4a5b55a2</td>\n",
-       "      <td>{\"streams\": [{\"index\": 0, \"codec_name\": \"h264\"...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>33</td>\n",
-       "      <td>assets/data/TrackAddict/Log-20230711-174746 Se...</td>\n",
-       "      <td>3d7e8f32590e6056970c05626195c1a8</td>\n",
-       "      <td>{\"streams\": [{\"index\": 0, \"codec_name\": \"h264\"...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>42</td>\n",
-       "      <td>assets/data/TrackAddict/Log-20230707-093013 wa...</td>\n",
-       "      <td>b9fbf97f0c79899a4f8af1304a245624</td>\n",
-       "      <td>{\"streams\": [{\"index\": 0, \"codec_name\": \"h264\"...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id                                           filename  \\\n",
-       "0  31  assets/data/TrackAddict/Log-20230626-173441 wa...   \n",
-       "1  33  assets/data/TrackAddict/Log-20230711-174746 Se...   \n",
-       "2  42  assets/data/TrackAddict/Log-20230707-093013 wa...   \n",
-       "\n",
-       "                           checksum  \\\n",
-       "0  30b55d42d2d5a76d46a4387e4a5b55a2   \n",
-       "1  3d7e8f32590e6056970c05626195c1a8   \n",
-       "2  b9fbf97f0c79899a4f8af1304a245624   \n",
-       "\n",
-       "                                            metadata  \n",
-       "0  {\"streams\": [{\"index\": 0, \"codec_name\": \"h264\"...  \n",
-       "1  {\"streams\": [{\"index\": 0, \"codec_name\": \"h264\"...  \n",
-       "2  {\"streams\": [{\"index\": 0, \"codec_name\": \"h264\"...  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'MockDB' object has no attribute 'test'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-9f51d1e1b208>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDB\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'MockDB' object has no attribute 'test'"
+     ]
     }
    ],
    "source": [
@@ -188,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-07-31T21:47:16.029934Z",
@@ -275,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
